--- a/LP.html
+++ b/LP.html
@@ -1,10 +1,11 @@
-<!doctype html>
-
-<Head>
-
-</Head>
-
-<Body>
-	<h1> I Love git </h1>
-	<h2> It is intresting, but in the begining it seems confusing </h2>
-</Body>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>git .. my experiance</title>
+	</head>
+	<body>
+		<h1>git is very intresting</h1>
+		<h2>In the begining it seems a bit confusing, with practice you figure it out</h2>
+	</body>
+</html>
