--- a/LP.html
+++ b/LP.html
@@ -7,4 +7,5 @@
 <Body>
 	<h1> I Love git </h1>
 	<h2> It is intresting, but in the begining it seems confusing </h2>
+	<h3> Keep Trying, enjoy </h3>
 </Body>
